--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "David Manzano",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "jquery": "^3.2.1",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
     "mysql": "^2.13.0"
